<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navegacionInicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/tituloInicio"/>

    <item
        android:id="@+id/navegacionBusqueda"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/tituloBusqueda" />

    <item
        android:id="@+id/navegacionPaneles"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/tituloPublicar"
        />
    <!--android:icon="@android:drawable/ic_input_add"-->

    <item
        android:id="@+id/navegacionEventos"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/tituloEventos" />
    <!--<item
        android:id="@+id/navegacionNotificacion"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Notificaciones" />-->
    <item
        android:id="@+id/navegacionPerfil"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/tituloPerfil"/>

</menu>